# huggingface-services

./: .gitignore  main.py  model_registry.py  pubsub.py  pyproject.toml
model_services/: base.py  entity_linking.py  entity_recognition.py  schemas.py  summarization.py
tests/model_services/: test_entity_linking_model_service.py
