[project]
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["."]
